# semanticClimate

./: Internship_discussion.md  Keyword_Extraction_Tutorial.ipynb  OPEN NOTE BOOK AND SEMENTIFICATION (1).md  PDF2TXT  README.md  Summary_OpenNotebook.md  abbreviation_table_both.csv  branching, merging, committing - seesion II , 21.06.24.md.md  docanalysis  events.md  pdfplumber  pymupdf - Automatic Image Extraction  test.html  test_dictionary.html
CaptionExtractionPipeline/: SeparateCaption.py  ezocr.py
CaptionSeparation/: SeparateCaption.py
Summarization/: summarization.ipynb  summary of chapter 03  summary of chapter 05  untitled.html
TextToHTML/: TextToHTML.py
abbreviation/: README.md  abbreviation_extraction.py  abbreviation_table.csv  requirement.txt
alis2024/: 2024_06_13-ranganathan.md  2024_06_13-ranganathan.txt  README.html  README.md  Summary_2024-06-05_11_opennote_semantic.md.md  Summary_OpenNotebook.md  ai.md  alis2024_ovw_part2.txt  figures.html  long_ms_2024-08-01.md  openness.md  publishers.md  sdg.bc.html  sdg.bc.txt  sdg.html
captions/: r_cap_16.1.2.txt  r_cap_16.3.txt  r_cap_16.4.txt
climate_justice/: entities.csv  org.csv  (+2 more)
keyword_extraction/code_v2/: .gitignore  Chapter05_text.txt  Keyword_extraction.ipynb  README.md  keyword_extraction.py  keyword_extraction_api.py  keyword_extraction_v2_test.py  pyproject.toml  requirements.txt  sample.json  test.py  testwikidata.txt
keyword_extraction/code_v2/resources/: Chapter05.html  Chapter05_keyphrases.csv  html_with_ids.html
keyword_extraction/code_v2/test/: test_keyword_extraction.py
(+35345 files in other folders)
